--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Monster Survivors - An Epic Survival Adventure Game | XiaoLan Gaming</title>
     <meta name="description" content="Play Monster Survivors online - Battle endless waves of monsters in this thrilling survival adventure game. Test your skills and see how long you can survive!">
     <link rel="canonical" href="https://xiaolan.online/monster-survivors">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VB3KV9GWH1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VB3KV9GWH1');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -149,4 +158,4 @@
         </div>
     </footer>
 </body>
-</html>
+</html>    
